--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -36,33 +36,30 @@
             <span class="info-heading">გამოგვყევით</span>
         </div>
         <div class="info-bodies">
-            <div class="info-body">
+            <div class="info-body1">
                 <div>ჩვენ შესახებ</div>
                 <div>პარტნიორები</div>
                 <div>ექიმებისთვის</div>
                 <div>კლინიკებისთვის</div>
                 <div>აფთიაქებისთვის</div>
             </div>
-            <div class="info-body">
-                <div>ჩვენ შესახებ</div>
-                <div>პარტნიორები</div>
-                <div>ექიმებისთვის</div>
-                <div>კლინიკებისთვის</div>
-                <div>აფთიაქებისთვის</div>
+            <div class="info-body2">
+                <div>ექიმები</div>
+                <div>კლინიკები</div>
+                <div>ანოტაციები</div>
+                <div>ბლოგი</div>
+                <div>მედია</div>
             </div>
-            <div class="info-body">
-                <div>ჩვენ შესახებ</div>
-                <div>პარტნიორები</div>
-                <div>ექიმებისთვის</div>
-                <div>კლინიკებისთვის</div>
-                <div>აფთიაქებისთვის</div>
+            <div class="info-body3">
+                <div>სამუშაო დღეები: <br>ორშ - პარ</div>
+                <div>სამუშაო დრო: <br>9:00 - 17:00</div>
+                <div>იაკობ ნიკოლაძე №10</div>
+                <div>032 2 100 100</div>
             </div>
-            <div class="info-body">
-                <div>ჩვენ შესახებ</div>
-                <div>პარტნიორები</div>
-                <div>ექიმებისთვის</div>
-                <div>კლინიკებისთვის</div>
-                <div>აფთიაქებისთვის</div>
+            <div class="info-body4">
+                <div>Facebook</div>
+                <div>Instagram</div>
+                <div>Youtube</div>
             </div>
         </div>
     </div>
