1. Add home component html elements and css styles. 2. Add RegisterComponent 3. Implement redirection to register page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,7 +41,7 @@
     <div class="authorize-register-button">
       <span class="authorize-button">ავტორიზაცია</span>
       <span> / </span>
-      <span class="register-button">რეგისტრაცია</span>
+      <span routerLink="/register" class="register-button">რეგისტრაცია</span>
     </div>
     <div class="language-button">ENG</div>
   </div>
