1. Add email validation via API 2. Add verification code validation via API 3. Add user registration in the database via API 4. Add http interceptor for header/error handling 5. Minor changes to registration page html and css

--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -119,13 +119,21 @@
     height: 17px;
 }
 
+.send-email-icon:hover{
+    cursor: pointer;
+}
+
 .show-password-container{
     position: absolute;
     margin-top: 40px;
     margin-left: 460px;
 }
 
-.send-password-icon{
-    width: 16px;
-    height: 16px;
+.show-password-icon{
+    width: 24px;
+    height: 24px;
+}
+
+.show-password-icon:hover{
+    cursor: pointer;
 }
