--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -8,14 +8,14 @@
 
 .thumbnail-foreground{
     position: absolute;
-    width: 1920px;
+    width: 100%;
     height: 600px;
     background-color: rgb(5, 51, 84, 0.15);
     z-index: 3;
 }
 
 .thumbnail-background{
-    width: 1920px;
+    width: 100%;
     height: 600px;
     z-index: 1;
 }
