--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,6 +1,6 @@
 .register-container{
-    height: 370px;
-    width: 1920px;
+    height: 388px;
+    width: 100%;
 }
 
 .register-form-container{
@@ -21,7 +21,7 @@
 }
 
 .register-form{
-    margin-top: 30px;
+    margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
@@ -93,7 +93,7 @@
 }
 
 .register-submit-button{
-    margin-top: -10px;
+    margin-top: -8px;
     margin-right: -18px;
     margin-left: auto;
     width: 180px;
@@ -115,8 +115,9 @@
 }
 
 .send-email-icon{
+    margin-top: -3px;
     width: 20px;
-    height: 17px;
+    height: 20px;
 }
 
 .send-email-icon:hover{
