--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -18,6 +18,7 @@
     display: flex;
     padding-left: 20px;
     margin-right: 20px;
+    cursor: pointer;
 }
 
 #logo-image{
@@ -223,7 +224,7 @@
     margin-left: 20px;
     display: flex;
     align-items: center;
-    font-family: FiraGO;
+    font-family: 'FiraGO';
     font-size: 18px;
     font-weight: 400;
     line-height: 21.6px;
@@ -313,5 +314,63 @@
     padding-right: 12px;
     padding-top: 13px;
     padding-bottom: 13px;
+}
+
+.user-tab{
+    display: block;
+    width: auto;
+    height: 18px;
+    cursor: pointer;
+}
+
+.user-tab-head{
+    display: flex;
+    width: auto;
+}
+
+#user-icon{
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    margin-top: -4px;
+    margin-left: -18px;
+    margin-right: 12px;
+    background-color: black;
+    align-items: center;
+}
+
+.user-name{
+    padding-top: 1px;
+    font-family: 'FiraGO';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.2px;
+    color: #18A4E1;
+}
+
+.user-tab-options{
+    height: 70px;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #F0FAFF;
+    border-radius: 0  0 20px 20px;
+}
+
+.user-tab-option{
+    margin-top: 10px;
+    margin-left: 24px;
+    font-family: 'FiraGO';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.2px;
+    color: #053354;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.user-tab-option:hover{
+    color: #18A4E1;
 }
 
