--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -9,13 +9,93 @@
 }
 
 .login-container{
-    width: 600px;
-    height: 450px;
+    width: 450px;
+    height: 300px;
     background-color: white;
     padding: 30px;
     position: fixed;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%,-50%);
     z-index: 11;
+    border-radius: 10px;
+}
+
+.login-form{
+    width: 370px;
+}
+
+h1{
+    width: 177px;
+    height: 31px;
+    margin-left: 50px;
+    font-family: 'FiraGO';
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 31.2px;
+    color: #18A4E1;
+}
+
+.field-container{
+    width: 300px;
+    height: 65px;
+    display: flex;
+    flex-direction: column;
+}
+
+.field-input{
+    width: 300px;
+    height: 40px;
+    border-radius: 50px;
+    border: 1px solid #ECF2F8;
+    margin-left: 50px;
+    padding-left: 20px;
+    font-family: 'FiraGO';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19.2px;
+    color: #053354;
+}
+
+.field-input::placeholder{
+    width: 250px;
+    height: 17px;
+    font-family: 'FiraGO';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.8px;
+    color: #0533544D;
+}
+
+.field-input:focus{
+    outline: none;
+    border: 1px solid #18A4E1;
+}
+
+.reset-password-text{
+    width: 131px;
+    height: 17px;
+    font-family: 'FiraGO';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.8px;
+    color: #053354;
+    margin-left: auto;
+    margin-top: -10px;
+    cursor: pointer;
+}
+
+.login-submit-button{
+    width: 180px;
+    height: 40px;
+    border-radius: 50px;
+    border: none;
+    font-family: 'FiraGO';
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19.2px;
+    color: #FFFFFF;
+    background: #053354;
+    margin-left: 50px;
+    margin-top: 30px;
 }
