--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -317,10 +317,9 @@
 }
 
 .user-tab{
-    display: block;
+    display: flex;
     width: auto;
     height: 18px;
-    cursor: pointer;
 }
 
 .user-tab-head{
@@ -337,6 +336,7 @@
     margin-right: 12px;
     background-color: black;
     align-items: center;
+    cursor: pointer;
 }
 
 .user-name{
@@ -348,29 +348,12 @@
     color: #18A4E1;
 }
 
-.user-tab-options{
-    height: 70px;
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    background-color: #F0FAFF;
-    border-radius: 0  0 20px 20px;
-}
-
-.user-tab-option{
-    margin-top: 10px;
-    margin-left: 24px;
-    font-family: 'FiraGO';
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 19.2px;
-    color: #053354;
+#logout-icon{
+    width: 20px;
+    height: 20px;
+    padding-top: 1px;
+    padding-left: 10px;
     cursor: pointer;
-    z-index: 10;
 }
 
-.user-tab-option:hover{
-    color: #18A4E1;
-}
 
