--- a/src/app/components/doctor-card/doctor-card.component.css
+++ b/src/app/components/doctor-card/doctor-card.component.css
@@ -62,7 +62,14 @@
     width: 157px;
     height: 157px;
     border-radius: 157px;
-    background: #000000;
+    overflow: hidden;
+}
+
+.doctor-card-image{
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    object-fit: cover;
 }
 
 .doctor-card-name{
