--- a/src/app/components/doctor-card/doctor-card.component.css
+++ b/src/app/components/doctor-card/doctor-card.component.css
@@ -45,13 +45,18 @@
     color: #05335480;
 }
 
-#pin-icon-doctor{
+.doctor-pin-container{
     width: 24px;
     height: 24px;
     margin-top: 11px;
     margin-right: 20px;
+    cursor: pointer;
 }
 
+#pin-icon-doctor{
+    width: 24px;
+    height: 24px;
+}
 
 .doctor-card-photo{
     display: flex;
