--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -370,10 +370,7 @@
     position: absolute;
     width: 450px;
     padding-left: 0;
-    /* margin-top: -24px;
-    padding-top: 30px; */
     border: 1px solid #18A4E1;
-    /* border-top: none; */
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     border-top-left-radius: 25px;
@@ -405,6 +402,10 @@
 
 .search-results::-webkit-scrollbar-thumb {
     border: none
+}
+
+.abc{
+    border: 1px solid #18a5e159;
 }
 
 
