--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -48,16 +48,16 @@
       <div class="search-by-name-container">
         <input class="search-by-name" placeholder="მოძებნე ექიმი სახელით" [(ngModel)]="nameSearchQuery" (input)="onNameSearchChange()"/>
         <ul *ngIf="filteredNameDoctors.length > 0" class="search-results">
-          <li *ngFor="let doctor of filteredNameDoctors" (click)="onSelectDoctor(doctor)">
-            {{ doctor.name }}
+          <li *ngFor="let doctor of filteredNameDoctors" (click)="onSelectDoctor(doctor)" class="abc">
+            <app-search-doctor-view [doctor]="doctor"></app-search-doctor-view>
           </li>
         </ul>
       </div>
       <div class="search-by-speciality-container">
         <input class="search-by-speciality" placeholder="მოძებნე სპეციალობით" [(ngModel)]="specialitySearchQuery" (input)="onSpecialitySearchChange()"/>
         <ul *ngIf="filteredSpecialityDoctors.length > 0" class="search-results">
-          <li *ngFor="let doctor of filteredSpecialityDoctors" (click)="onSelectDoctor(doctor)">
-            {{ doctor.name }}
+          <li *ngFor="let doctor of filteredSpecialityDoctors" (click)="onSelectDoctor(doctor)" class="abc">
+            <app-search-doctor-view [doctor]="doctor"></app-search-doctor-view>
           </li>
         </ul>
       </div>
