1. Refactor doctor data fetch in doctor-card and search-doctor-view 2. Update doctor service with new methods to fetch data reusably 3. Add ReservationComponent 4. Init reservation route and doctor info fetch dynamically in reservation component 5. Add html/css styles for new component

--- a/src/app/components/doctor-card/doctor-card.component.html
+++ b/src/app/components/doctor-card/doctor-card.component.html
@@ -20,13 +20,13 @@
             {{doctor?.firstName}} {{doctor?.lastName}}
         </div>
         <div class="doctor-card-category">
-            {{getDoctorCategory(doctor?.category)}}
+            {{category}}
         </div>
         <div class="doctor-card-rating">
-            <img *ngFor="let _ of getDoctorRatingArray(doctor?.rating)" src="/assets/images/star-icon.png">
+            <img *ngFor="let _ of rating" src="/assets/images/star-icon.png">
         </div>
     </div>
-    <button class="doctor-card-reserve-button">
+    <button class="doctor-card-reserve-button" (click)="onSelectReservation(doctor!)">
         <div class="reserve-button-text">მიღებაზე ჩაწერა</div>
         <img src="/assets/images/arrow-icon-dark.svg" id="reserve-button-arrow">
     </button>
