--- a/src/app/components/reservation/reservation.component.css
+++ b/src/app/components/reservation/reservation.component.css
@@ -94,7 +94,7 @@
 }
 
 .experience-info{
-    width: auto;
+    width: 100%;
     height: 140px;
     display: flex;
     justify-content: center;
@@ -105,6 +105,8 @@
 
 .experience-list{
     font-family: 'FiraGO';
+    width: auto;
+    min-width: 70%;
     font-size: 18px;
     font-weight: 400;
     line-height: 21.6px;
