1. Add ProfileComponent 2. Add UserRole enum for Admin, Patient, Doctor roles 3. Initialize user profile page with dynamic data 4. Add route to ProfileComponent 5. Update html/css styles

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
         <div class="field-container">
             <input id="password" class="field-input" type="password" formControlName="passwordField" placeholder="პაროლი"/>
         </div>
-        <div class="reset-password-text" (click)="InitPasswordReset()">
+        <div class="reset-password-text" (click)="ResetPassword()">
             პაროლის აღდგენა
         </div>
         <button class="login-submit-button" type="submit">
