--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="overlay" (click)="ToggleLoginForm()"></div>
+<div class="overlay" (click)="ToggleForm()"></div>
 <div class="login-container">
     <h1>ავტორიზაცია</h1>
     <form class="login-form" [formGroup] = "loginForm" (ngSubmit) = "onSubmit()">
