--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -40,7 +40,8 @@
                 <span class="field-value">{{doctor?.email ?? patient?.email}}</span>
             </div>
             <div class="field-body">
-                <span class="change-password-field" (click)="ChangePassword()">პაროლის შეცვლა</span>
+                <span class="change-password-field" (click)="ToggleChangePassword()">პაროლის შეცვლა</span>
+                <app-change-password *ngIf="changePasswordOpen" (toggle)="ToggleChangePassword()"></app-change-password>
             </div>
             <div *ngIf="doctor" class="field-body">
                 <span class="field-name">დაჯავშნილია:</span>
