Update change password component, add html/css styles

--- a/src/app/components/change-password/change-password.component.css
+++ b/src/app/components/change-password/change-password.component.css
@@ -20,3 +20,60 @@
     z-index: 11;
     border-radius: 10px;
 }
+
+h1{
+    width: auto;
+    height: auto;
+    margin-left: 50px;
+    font-family: 'FiraGO';
+    font-size: 26px;
+    font-weight: 500;
+    line-height: 31.2px;
+    color: #18A4E1;
+}
+
+.field-input{
+    width: 300px;
+    height: 40px;
+    margin-top: 5px;
+    border-radius: 50px;
+    border: 1px solid #ECF2F8;
+    margin-left: 50px;
+    padding-left: 20px;
+    font-family: 'FiraGO';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19.2px;
+    color: #053354;
+}
+
+.field-input::placeholder{
+    width: 250px;
+    height: 17px;
+    font-family: 'FiraGO';
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.8px;
+    color: #0533544D;
+}
+
+.field-input:focus{
+    outline: none;
+    border: 1px solid #18A4E1;
+}
+
+.login-submit-button{
+    width: 180px;
+    height: 40px;
+    border-radius: 50px;
+    border: none;
+    font-family: 'FiraGO';
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19.2px;
+    color: #FFFFFF;
+    background: #053354;
+    margin-left: 50px;
+    margin-top: 30px;
+}
+
