--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -1,4 +1,18 @@
 <div class="overlay" (click)="ToggleForm()"></div>
 <div class="change-password-container">
-    change-password works!
+    <h1>პაროლის შეცვლა</h1>
+    <form class="change-password-form" [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
+        <div class="field-container">
+            <input id="oldPassword" class="field-input" type="text" formControlName="oldPasswordField" placeholder="ძველი პაროლი"/>
+        </div>
+        <div class="field-container">
+            <input id="newPassword" class="field-input" type="text" formControlName="newPasswordField" placeholder="ახალი პაროლი"/>
+        </div>
+        <div class="field-container">
+            <input id="newPassword" class="field-input" type="text" formControlName="repeatedNewPasswordField" placeholder="გაიმეორეთ ახალი პაროლი"/>
+        </div>
+        <button class="login-submit-button" type="submit">
+            დადასტურება
+        </button>
+    </form>
 </div>
