--- a/src/app/components/change-password/change-password.component.css
+++ b/src/app/components/change-password/change-password.component.css
@@ -77,3 +77,18 @@ h1{
     margin-top: 30px;
 }
 
+.show-password-container{
+    position: absolute;
+    margin-left: 335px;
+    margin-top: -34px;
+}
+
+.show-password-icon{
+    width: 24px;
+    height: 24px;
+}
+
+.show-password-icon:hover{
+    cursor: pointer;
+}
+
