--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -3,13 +3,16 @@
     <h1>პაროლის შეცვლა</h1>
     <form class="change-password-form" [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
         <div class="field-container">
-            <input id="oldPassword" class="field-input" type="text" formControlName="oldPasswordField" placeholder="ძველი პაროლი"/>
+            <input id="oldPassword" class="field-input" type="password" formControlName="oldPasswordField" placeholder="ძველი პაროლი"/>
         </div>
         <div class="field-container">
-            <input id="newPassword" class="field-input" type="text" formControlName="newPasswordField" placeholder="ახალი პაროლი"/>
+            <input id="newPassword" class="field-input" [type]="showPassword ? 'text' : 'password'" formControlName="newPasswordField" placeholder="ახალი პაროლი"/>
+            <div class="show-password-container" (click)="showPassword = !showPassword">
+                <img src="/assets/images/show-password-icon.svg" class ="show-password-icon">
+            </div>
         </div>
         <div class="field-container">
-            <input id="newPassword" class="field-input" type="text" formControlName="repeatedNewPasswordField" placeholder="გაიმეორეთ ახალი პაროლი"/>
+            <input id="newPassword" class="field-input" type="password" formControlName="repeatedNewPasswordField" placeholder="გაიმეორეთ ახალი პაროლი"/>
         </div>
         <button class="login-submit-button" type="submit">
             დადასტურება
